--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   firebase_core: 1.6.0
   firebase_auth: 3.1.0
   google_sign_in: ^5.1.0
+  flutter_login_facebook: ^1.4.1
+  #flutter_login_facebook: ^1.4.1
+  
   
 
 dev_dependencies:
